--- a/artists.html
+++ b/artists.html
@@ -56,14 +56,14 @@
         </div>
         <div class="row row-content">
             <div class="col-12 col-sm-6">
-                <div class="card" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
+                <div class="card mb-3" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true" id="biswapro">
                     <h3 class="card-header bg-light">Biswa Jyotishmana</h3>
                     <div class="media">
                         <div class="row">
-                            <div class="col-6 col-sm-4">
+                            <div class="col-12 col-md-4">
                                 <img class="d-flex mr-3 img-fluid img-thumbnail" src="img/biswa.jpg" alt="biswa">
                             </div>
-                            <div class="col-6 col-sm">
+                            <div class="col-12 col-md">
                                 <div class="media-body">
 
                                     <p style="padding: 10px 10px;">A cheerful and talented girl, currently pursuing her B.tech degree in computer science and engineering from <b>Jorhat Engneering College</b>. A happy go lucky person having a strong passion for creating artistic pieces
@@ -74,6 +74,34 @@
                                             <a class="btn btn-success" role="button" href="mailto: biswajyotishmana@gmail.com"><i class="fa fa-envelope fa-lg"></i></a>
                                             <a class="btn btn-primary" role="button" href="https://www.facebook.com/profile.php?id=100010728424112"><i class="fa fa-facebook fa-lg"></i></a>
                                             <a class="btn btn-danger" role="button" href="https://www.instagram.com/biswajyotishmana/"><i class="fa fa-instagram fa-lg"></i></a>
+                                        </div>
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6">
+                <div class="card mt-3" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true" id="meghnapro">
+                    <h3 class="card-header bg-light">Meghna Deb</h3>
+                    <div class="media">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <img class="d-flex mr-3 img-fluid img-thumbnail" src="img/meghna.jpg" alt="meghna">
+                            </div>
+                            <div class="col-12 col-md">
+                                <div class="media-body">
+
+                                    <p style="padding: 10px 10px;">Hello everyone I'm Meghna Deb, I'm currently pursuing btech from Jorhat engineering college. My field of interests are art and music. Art helps me to cope up with my anxiety problem that I'm dealing since 2010 , it
+                                        helped me to grow into a stronger and confident person, it gave me the support that I lacked before I discovered it and it's potential. I hope my art brighten up your day a little more and I hope it inspire you
+                                        to never give up .<br>
+                                        <b>Reach her at:</b>
+                                        <div class="btn-group-justified" role="group">
+                                            <a class="btn btn-warning" role="button" href="tel: +91 8011246377"><i class="fa fa-phone fa-lg"></i></a>
+                                            <a class="btn btn-success" role="button" href="mailto: meghad105@gmail.com"><i class="fa fa-envelope fa-lg"></i></a>
+                                            <a class="btn btn-danger" role="button" href="https://www.instagram.com/illustration0.0?igshid=mq4mxh673fjy"><i class="fa fa-instagram fa-lg"></i></a>
                                         </div>
                                     </p>
 
