--- a/digitalillustrations.html
+++ b/digitalillustrations.html
@@ -51,8 +51,8 @@
     <div class="container">
         <div class="row row-content">
             <div class="col-12 col-sm-5 offset-sm-4 align-self-center">
-                <a href="#">
-                    <h2 data-aos="fade-down" data-aos-duration="2000" data-aos-once="true" class="artistgallery">Biswa Jyotishmana's Gallery</h2>
+                <a href="./artists.html#biswapro">
+                    <h2 data-aos="fade-down" data-aos-duration="2000" data-aos-once="true" class="artistgallery" id="biswa">Biswa Jyotishmana's Gallery</h2>
                 </a>
             </div>
         </div>
@@ -88,10 +88,56 @@
                         <a href="./img/ill14.jpg"><img class="img-fluid indeximg" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true" src="img/ill14.jpg" alt="illustration14"></a>
                     </div>
                 </div>
-                <h3 data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" style="color: cyan;">For collaborations reach her at:
+                <h3 data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" style="color: darkred;">For collaborations reach her at:
                     <a href="mailto: biswajyotishmana@gmail.com"> <i class="fa fa-envelope fa-lg bg-dark"></i></a>
                 </h3>
-                <h4 data-aos="fade-up" data-aos-duration="3000" data-aos-once="true" style="color: floralwhite">for more info visit her profile <a href="./artists.html" class="text-warning">Biswajyotishmana</a></h4>
+                <h4 data-aos="fade-up" data-aos-duration="3000" data-aos-once="true" style="color: darkslateblue">for more info visit her profile <a href="./artists.html#biswapro" class="text-white">Biswajyotishmana</a></h4>
+
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12 col-sm-5 offset-sm-4 align-self-center">
+                <a href="./artists.html#meghnapro">
+                    <h2 data-aos="fade-down" data-aos-duration="2000" data-aos-once="true" class="artistgallery" id="meghna">Meghna Deb's Gallery</h2>
+                </a>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12 col-sm">
+                <h2 data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" style="color: maroon;">Her Art Pieces</h2>
+                <div class="d-flex flex-row justify-content-center">
+                    <div class="d-flex flex-column">
+                        <a href="./img/mill1.jpg"><img class="img-fluid indeximg" data-aos="fade-up" data-aos-duration="3000" data-aos-once="true" src="img/mill1.jpg" alt="illustration1m"></a>
+                        <a href="./img/mill2.jpg"><img class="img-fluid indeximg" data-aos="fade-left" data-aos-duration="3000" data-aos-once="true" src="img/mill2.jpg" alt="illustration2m"></a>
+                        <a href="./img/mill3.jpg"><img class="img-fluid indeximg" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true" src="img/mill3.jpg" alt="illustration3m"></a>
+
+                    </div>
+                    <div class="d-flex flex-column">
+
+                        <a href="./img/mill4.jpg"><img class="img-fluid indeximg" data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" src="img/mill4.jpg" alt="illustration4m"></a>
+                        <a href="./img/mill5.jpg"><img class="img-fluid indeximg" data-aos="fade-right" data-aos-duration="3000" data-aos-once="true" src="img/mill5.jpg" alt="illustration5m"></a>
+                        <a href="./img/mill7.jpg"><img class="img-fluid indeximg" data-aos="fade-up" data-aos-duration="3000" data-aos-once="true" src="img/mill7.jpg" alt="illustration7m"></a>
+
+                        <a href="./img/mill13.jpg"><img class="img-fluid indeximg" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true" src="img/mill13.jpg" alt="illustration13m"></a>
+                    </div>
+                    <div class="d-flex flex-column">
+                        <a href="./img/mill9.jpg"><img class="img-fluid indeximg" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true" src="img/mill9.jpg" alt="illustration9m"></a>
+                        <a href="./img/mill6.jpg"><img class="img-fluid indeximg" data-aos="fade-down-left" data-aos-duration="3000" data-aos-once="true" src="img/mill6.jpg" alt="illustration6m"></a>
+                        <a href="./img/mill8.jpg"><img class="img-fluid indeximg" data-aos="fade-left" data-aos-duration="3000" data-aos-once="true" src="img/mill8.jpg" alt="illustration8m"></a>
+
+
+                    </div>
+                    <div class="d-flex flex-column">
+                        <a href="./img/mill10.png"><img class="img-fluid indeximg" data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" src="img/mill10.png" alt="illustration10m"></a>
+                        <a href="./img/mill11.png"><img class="img-fluid indeximg" data-aos="fade-right" data-aos-duration="3000" data-aos-once="true" src="img/mill11.png" alt="illustration11m"></a>
+                        <a href="./img/mill12.png"><img class="img-fluid indeximg" data-aos="fade-down-left" data-aos-duration="3000" data-aos-once="true" src="img/mill12.png" alt="illustration12m"></a>
+                        <a href="./img/mill14.jpg"><img class="img-fluid indeximg" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true" src="img/mill14.jpg" alt="illustration14m"></a>
+                    </div>
+                </div>
+                <h3 data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" style="color: cyan;">For collaborations reach her at:
+                    <a href="mailto: meghad105@gmail.com"> <i class="fa fa-envelope fa-lg bg-dark"></i></a>
+                </h3>
+                <h4 data-aos="fade-up" data-aos-duration="3000" data-aos-once="true" style="color: floralwhite">for more info visit her profile <a href="./artists.html#meghnapro" class="text-warning">Meghna Deb</a></h4>
 
             </div>
         </div>
