--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                         <div class="media">
                             <div class="row">
                                 <div class="col-12 col-sm-5">
-                                    <img class="d-flex mr-auto img-fluid" src="img/biswa.jpg" alt="illustration">
+                                    <img class="d-flex mr-auto img-fluid" src="img/meghna.jpg" alt="meghna">
                                 </div>
                                 <div class="col-12 col-sm-7">
                                     <div class="media-body">
-                                        <h2>Biswa Jyotishmana</h2>
-                                        <p>A cheerful person with an amazing personality. A passionate artist with a lot of potential within. For more info visit <a href="./artists.html" class="text-black-50">artists<i class="fa fa-arrow-right"></i></a></p>
+                                        <h2>Meghna Deb</h2>
+                                        <p>Hello everyone, I'm a freelance illustrator, and I love to draw vector art, intrinsic pattern and portrait.<a href="./artists.html#meghnapro" class="text-black-50">artists<i class="fa fa-arrow-right"></i></a></p>
                                     </div>
                                 </div>
                             </div>
@@ -87,21 +87,21 @@
                 <h2 data-aos="fade-down" data-aos-duration="3000" class="text-white" data-aos-once="true">Her Art Pieces</h2>
                 <div class="d-flex flex-row justify-content-center">
 
-                    <div class="d-flex flex-column">
+                    <div class="d-flex flex-column index">
 
-                        <img class="img-fluid indeximg" data-aos="fade-up" data-aos-duration="3000" data-aos-once="true" src="img/ill1.png" alt="illustration1">
-                        <img class="img-fluid indeximg" data-aos="fade-left" data-aos-duration="3000" data-aos-once="true" src="img/ill10.jpg" alt="illustration10">
-                        <img class="img-fluid indeximg" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true" src="img/ill2.jpg" alt="illustration2">
+                        <img class="img-fluid indeximg" data-aos="fade-up" data-aos-duration="3000" data-aos-once="true" src="img/mill1.jpg" alt="illustration1m">
+                        <img class="img-fluid indeximg" data-aos="fade-left" data-aos-duration="3000" data-aos-once="true" src="img/mill10.png" alt="illustration10m">
+                        <img class="img-fluid indeximg" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true" src="img/mill2.jpg" alt="illustration2m">
 
                     </div>
-                    <div class="d-flex flex-column">
+                    <div class="d-flex flex-column index">
 
-                        <img class="img-fluid indeximg" data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" src="img/ill4.jpg" alt="illustration4">
-                        <img class="img-fluid indeximg" data-aos="fade-right" data-aos-duration="3000" data-aos-once="true" src="img/ill5.jpg" alt="illustration5">
-                        <img class="img-fluid indeximg" data-aos="fade-down-left" data-aos-duration="3000" data-aos-once="true" src="img/ill6.jpg" alt="illustration6">
+                        <img class="img-fluid indeximg" data-aos="fade-down" data-aos-duration="3000" data-aos-once="true" src="img/mill4.jpg" alt="illustration4m">
+                        <img class="img-fluid indeximg" data-aos="fade-right" data-aos-duration="3000" data-aos-once="true" src="img/mill5.jpg" alt="illustration5m">
+                        <img class="img-fluid indeximg" data-aos="fade-down-left" data-aos-duration="3000" data-aos-once="true" src="img/mill6.jpg" alt="illustration6m">
                     </div>
                 </div>
-                <a class="text-white" data-aos="fade-right" data-aos-duration="3000" data-aos-delay="1000" data-aos-once="true" href="./digitalillustrations.html">Go to Gallery/Digital illustrations <i class="fa fa-arrow-right"></i></a>
+                <a class="text-white" data-aos="fade-right" data-aos-duration="3000" data-aos-delay="1000" data-aos-once="true" href="./digitalillustrations.html#meghna">Go to Gallery/Digital illustrations <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
